# network-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
applications/fraud/fraud-rings-in-bank-data/sas/: fraud_ring_demo.sas
applications/natural-language-processing/word-embeddings-for-approximate-pattern-matching/python/: Digraph.gv  patternmatch_with_embeddings.ipynb
applications/natural-language-processing/word-embeddings-for-approximate-pattern-matching/sas/: patternmatch_with_embeddings.sas
applications/social/inmate-network/: README.md
applications/social/inmate-network/dot/: query_1_match_1.dot  query_1_match_2.dot  query_1_match_3.dot  query_1_match_4.dot  query_1_match_5.dot  query_2_match_1.dot  query_2_match_2.dot  query_2_match_3.dot  query_2_match_4.dot  query_2_match_5.dot  query_3_0_match_1.dot  query_3_1_match_1.dot  query_3_1_match_2.dot  query_3_1_match_3.dot  query_3_3_match_1.dot  query_3_3_match_2.dot  query_3_3_match_3.dot  query_4_match_1.dot  query_4_match_2.dot  query_4_match_3.dot  query_4_match_4.dot  (+3 more)
examples/clique/python/: clique_sample.html  example_clique.ipynb
examples/community/python/: example_community.ipynb  example_karateclub.ipynb
examples/path/python/: Digraph.gv  example_paths.ipynb
examples/reach/python/: example_reach.ipynb
examples/reach/sas/: example_proc_sql.sas  example_reach.sas
python-demo/: .flake8  pyproject.toml  pyrightconfig.json
python-demo/notebooks/: __init__.py  example_clique.ipynb  example_community.ipynb  example_karateclub.ipynb  example_paths.ipynb  example_reach.ipynb  highlight
(+10 files in other folders)
